# server/out/swagger.json
@@ -4394,6 +4394,111 @@
             "JWT": []
           }
         ]
+      },
+      "get": {
+        "tags": [
+          "payment"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "skip",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Endpoint to get payment list",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "total": {
+                      "type": "number",
+                      "example": 1
+                    },
+                    "limit": {
+                      "type": "number",
+                      "example": 10
+                    },
+                    "skip": {
+                      "type": "number",
+                      "example": 0
+                    },
+                    "items": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "example": "65cd9d8d5cae5ffc348ed638"
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "string"
+                          },
+                          "user": {
+                            "type": "string",
+                            "example": "65cd9d8d5cae5ffc348ed638"
+                          },
+                          "country": {
+                            "type": "string",
+                            "example": "65cd9d8d5cae5ffc348ed638"
+                          },
+                          "organization": {
+                            "type": "string",
+                            "example": "65cd9d8d5cae5ffc348ed638"
+                          },
+                          "roles": {
+                            "type": "string",
+                            "example": "string"
+                          },
+                          "joinDate": {
+                            "type": "string",
+                            "example": "string"
+                          },
+                          "createdBy": {
+                            "type": "string",
+                            "example": "65cd9d8d5cae4ffc348ed682"
+                          },
+                          "createdAt": {
+                            "type": "string",
+                            "example": "2024-02-17T07:50:12.025Z"
+                          },
+                          "updatedAt": {
+                            "type": "string",
+                            "example": "2024-02-17T07:50:12.025Z"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
       }
     },
     "/v1/payment/send-hi": {
@@ -4621,208 +4726,6 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/v1/payment/payment-head": {
-      "get": {
-        "tags": [
-          "payment"
-        ],
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "Endpoint to get payment list",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "success": {
-                  "type": "boolean",
-                  "example": true
-                },
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "total": {
-                      "type": "number",
-                      "example": 1
-                    },
-                    "limit": {
-                      "type": "number",
-                      "example": 10
-                    },
-                    "skip": {
-                      "type": "number",
-                      "example": 0
-                    },
-                    "items": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "_id": {
-                            "type": "string",
-                            "example": "65cd9d8d5cae5ffc348ed638"
-                          },
-                          "name": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "user": {
-                            "type": "string",
-                            "example": "65cd9d8d5cae5ffc348ed638"
-                          },
-                          "country": {
-                            "type": "string",
-                            "example": "65cd9d8d5cae5ffc348ed638"
-                          },
-                          "organization": {
-                            "type": "string",
-                            "example": "65cd9d8d5cae5ffc348ed638"
-                          },
-                          "roles": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "joinDate": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "createdBy": {
-                            "type": "string",
-                            "example": "65cd9d8d5cae4ffc348ed682"
-                          },
-                          "createdAt": {
-                            "type": "string",
-                            "example": "2024-02-17T07:50:12.025Z"
-                          },
-                          "updatedAt": {
-                            "type": "string",
-                            "example": "2024-02-17T07:50:12.025Z"
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
-      }
-    },
-    "/v1/payment/get": {
-      "post": {
-        "tags": [
-          "payment"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "limit",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "skip",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Endpoint to get payment list",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "success": {
-                  "type": "boolean",
-                  "example": true
-                },
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "total": {
-                      "type": "number",
-                      "example": 1
-                    },
-                    "limit": {
-                      "type": "number",
-                      "example": 10
-                    },
-                    "skip": {
-                      "type": "number",
-                      "example": 0
-                    },
-                    "items": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "_id": {
-                            "type": "string",
-                            "example": "65cd9d8d5cae5ffc348ed638"
-                          },
-                          "name": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "user": {
-                            "type": "string",
-                            "example": "65cd9d8d5cae5ffc348ed638"
-                          },
-                          "country": {
-                            "type": "string",
-                            "example": "65cd9d8d5cae5ffc348ed638"
-                          },
-                          "organization": {
-                            "type": "string",
-                            "example": "65cd9d8d5cae5ffc348ed638"
-                          },
-                          "roles": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "joinDate": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "createdBy": {
-                            "type": "string",
-                            "example": "65cd9d8d5cae4ffc348ed682"
-                          },
-                          "createdAt": {
-                            "type": "string",
-                            "example": "2024-02-17T07:50:12.025Z"
-                          },
-                          "updatedAt": {
-                            "type": "string",
-                            "example": "2024-02-17T07:50:12.025Z"
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
       }
     },
     "/v1/payment/count-documents": {
